2008-06-27  Ivan Frade  <ivan.frade@nokia.com>

	* tests/**: Added license in .c/.h files.
	
2008-06-27  Philip Van Hoof  <pvanhoof@gnome.org>

	* svn merge -r 1769:1798 ../xesam-support

2008-06-27  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer-db.c
	(tracker_db_create_service): Allow modules to specify a custom dirname
	and basename for the service.
	* src/tracker-indexer/modules/evolution.c: And use it for local mail.
	IMAP has yet to come.

2008-06-27  Ivan Frade  <ivan.frade@nokia.com>

	* test/libtracker-common/tracker-type-utils-test.c:
	(test_date_to_string): now it doesnt depend on the timezone of the 
	tester.
	
2008-06-27  Philip Van Hoof  <pvanhoof@gnome.org>

	* tests/libtracker-db/union-performance.c: Added a performance test
	for a UNION query structure vs. views that me and ottela want to 
	start using for certain Xesam related queries

2008-06-27  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-xesam-query.c:
	* src/trackerd/tracker-rdf-query.c:

	Incorrect queries (user input) should never crash the service
	(critical assertions)

2008-06-27  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-module-config.[ch]: Add API to get
	all modules. Fixed the module naming now we don't use the .xml
	extension. 
	
	* src/trackerd/tracker-main.c:
	* src/trackerd/tracker-process.[ch]: Start by setting up monitors
	and recursive monitors. The recursive monitors are still not
	finished, this requires some work.

2008-06-27  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-file-utils.[ch]:
	* src/libtracker-common/tracker-config.c:
	* src/libtracker-common/tracker-module-config.c: Added
	tracker_path_evaluate_name() to convert $HOME and "~/foo" into
	real paths. This is now used by the module config and the main
	config module when loading directory strings or string lists.

2008-06-27  Philip Van Hoof  <pvanhoof@gnome.org>
